Form-selection-styles

--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -20,7 +20,7 @@
 
 				<li class="company-icon">
 					<a href="#">
-						<img id="header-img" src="mustachelogotransp.PNG" alt="company-icon">
+						<img id="header-img" src="mustache-icon.png" alt="company-icon">
 					</a>
 				</li>
 
@@ -41,7 +41,7 @@
 		<section class="home" id="home">
 			<div class="container">
 				<div class="mustachelogo">
-					<img id="mustacheheader" src="mustachelarge2.png" alt="company-icon">
+					<img id="mustacheheader" src="mustachelarge.png" alt="company-icon">
 				</div>
 				<form id="home-form">
 					<input type="email" class="home-input" id="email" name="email" placeholder="Enter your email" required>
@@ -52,7 +52,7 @@
 		<section class="options" id="options">
 			<form>
 				<h1 id="option-header">Options</h1>
-				<div class="section-container row">
+				<div class="section-container">
 					<input type="radio" class="radio-option" name="optionpacks" id="singlepack" value="singlepack" required>
 					<label for="singlepack" class="optionitem">
 						<div class="mustachecontainer">
