--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -8,7 +8,6 @@
 	<title>Movember Mustache Product</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css">
-	<script src="main.js"></script>
 </head>
 
 <body>
@@ -24,14 +23,14 @@
 					</a>
 				</li>
 
-				<li class="nav-link">
-					<a href="#home">Home</a>
+				<li class="nav-li">
+					<a class="nav-link" href="#home">Home</a>
 				</li>
-				<li class="nav-link">
-					<a href="#options">Options</a>
+				<li class="nav-li">
+					<a class="nav-link" href="#options">Options</a>
 				</li>
-				<li class="nav-link">
-					<a href="#video">Video</a>
+				<li class="nav-li">
+					<a class="nav-link" href="#video">Video</a>
 				</li>
 			</ul>
 		</nav>
@@ -43,15 +42,15 @@
 				<div class="mustachelogo">
 					<img id="mustacheheader" src="mustachelarge.png" alt="company-icon">
 				</div>
-				<form id="home-form">
+				<form id="form" action="https://www.freecodecamp.com/email-submit) that confirms the email address was entered">
 					<input type="email" class="home-input" id="email" name="email" placeholder="Enter your email" required>
-					<input type="submit" class="home-input" id="submit" value="Tell me Mo'">
+					<input type="submit" class="home-input" id="submit" name="submit" value="Tell me Mo'">
 				</form>
 			</div>
 		</section>
 		<section class="options" id="options">
+			<h1 id="option-header">Options</h1>
 			<form>
-				<h1 id="option-header">Options</h1>
 				<div class="section-container">
 					<input type="radio" class="radio-option" name="optionpacks" id="singlepack" value="singlepack" required>
 					<label for="singlepack" class="optionitem">
@@ -79,9 +78,9 @@
 					<input type="radio" class="radio-option" name="optionpacks" id="familypack" value="familypack">
 					<label for="familypack" class="optionitem">
 						<div class="mustachecontainer">
-							<img id="option-img1" src="mustachelogotransp.PNG" alt="company-icon">
-							<img id="option-img2" src="mustachelogotransp.PNG" alt="company-icon">
-							<img id="option-img3" src="mustachelogotransp.PNG" alt="company-icon">
+							<img id="option-img1" src="mustache-icon.png" alt="company-icon">
+							<img id="option-img2" src="mustache-icon.png" alt="company-icon">
+							<img id="option-img3" src="mustache-icon.png" alt="company-icon">
 						</div>
 						<h3>Family Pack</h3>
 						<h3>€ 30</h3>
@@ -91,9 +90,9 @@
 				<input type="submit" id="submit-option" value="Donate">
 			</form>
 		</section>
-		<section class="video" id="video">
+		<section class="video">
 			<div class="iframe-container">
-				<iframe src="https://www.youtube.com/embed/4AhS_-0J7HI?loop=1&modestbranding=1&rel=0&iv_load_policy=3&theme=light&color=white"
+				<iframe id="video" src="https://www.youtube.com/embed/4AhS_-0J7HI?loop=1&modestbranding=1&rel=0&iv_load_policy=3&theme=light&color=white"
 				 width="560" height="315" frameborder="0"></iframe>
 			</div>
 			<div class="footer">
