update submit mock url

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="mustachelogo">
 					<img id="mustacheheader" src="mustachelarge.png" alt="company-icon">
 				</div>
-				<form id="form" action="https://www.freecodecamp.com/email-submit) that confirms the email address was entered">
+				<form id="form" action="https://www.freecodecamp.com/email-submit">
 					<input type="email" class="home-input" id="email" name="email" placeholder="Enter your email" required>
 					<input type="submit" class="home-input" id="submit" name="submit" value="Tell me Mo'">
 				</form>
