update option form url

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="mustachelogo">
 					<img id="mustacheheader" src="mustachelarge.png" alt="company-icon">
 				</div>
-				<form id="form" action="https://www.freecodecamp.com/email-submit">
+				<form id="form" action="https://www.freecodecamp.com/email-submit" target="_blank">
 					<input type="email" class="home-input" id="email" name="email" placeholder="Enter your email" required>
 					<input type="submit" class="home-input" id="submit" name="submit" value="Tell me Mo'">
 				</form>
@@ -50,7 +50,7 @@
 		</section>
 		<section class="options" id="options">
 			<h1 id="option-header">Options</h1>
-			<form>
+			<form action="https://us.movember.com/donate/details" target="_blank">
 				<div class="section-container">
 					<input type="radio" class="radio-option" name="optionpacks" id="singlepack" value="singlepack" required>
 					<label for="singlepack" class="optionitem">
