--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Bree+Serif|Merriweather" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Movember Mustache Product</title>
+	<title>Movember Mustache</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css">
+	<link rel="icon" href="must-icon-sq.png" type="image/gif" sizes="16x16">
 </head>
 
 <body>
